# simplewebserver_for_redes1

./: CMakeLists.txt  README.md
src/: config.h.in  header.hpp  main.cpp  mime_types.cpp  mime_types.hpp  reply.cpp  reply.hpp  request.hpp  server.cpp  server.hpp
